apps/minio/kustomize/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio
  namespace: minio
spec:
  entryPoints:
    - minio-api
  routes:
    ## minio route
    - match: Host(`tcismanager.rd0.hwacom.com`)
      kind: Rule
      services:
        - name: minio
          port: 9000
      middlewares:
        - name: ipallowlist-minio-management
